# Aether

./: .clang-format  .gitignore  .gitmodules  .ninja_log  0001-tmp.patch  BuildGen.bat  CHANGELOG.md  CMakeLists.txt  DepsVersion.md  LICENSE  README.md  cpdll.bat  imgui.ini
Aether/: CMakeLists.txt  CreateInclude.bat  GenReflactionCode.bat  README.md
Aether/component_reflection/: Component.py
Aether/shader/: basic_fs.glsl  basic_vs.glsl  gaussian_blur_fs.glsl  gaussian_blur_vs.glsl  pbr_fs.glsl  pbr_vs.glsl  screen_quad_fs.glsl  screen_quad_vs.glsl  skybox_fs.glsl  skybox_vs.glsl
Aether/src/Aether/: Audio.h  Core.h  Event.h  IO.h  ImGui.h  Message.h  Render.h  Resource.h  Scene.h  Server.h  UI.h
Aether/src/Asset/: Image.cpp  Mesh.cpp  Mesh.h  MeshAsset.h  Model.cpp  Model.h  ModelAsset.cpp  ModelAsset.h  ModelAssetImporter.cpp  ModelAssetImporter.h  TextureAsset.cpp  TextureAsset.h  Vertex.cpp
Aether/src/Core/: Application.cpp  Application.h  Assert.h  Config.cpp  Config.h  Core.h  Input.cpp  Input.h  Layer.h  Log.cpp  Log.h  Math.h  UUID.cpp  UUID.h
Aether/src/Event/: KeyboardEvent.h  MouseEvent.h  WindowEvent.h
Aether/src/Geometry/: Rectangle.h
Aether/src/Render/: Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  Light.h  Math.cpp  Math.h  Mesh.h  Model.h  OpenGLApi.cpp  OpenGLApi.h  Renderer.cpp  Renderer3D.cpp  Renderer3D.h  Shader.cpp  Shader.h  ShaderLanguage.h  Texture2D.cpp  Texture2D.h  Transform.cpp  Transform.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
Aether/src/Scene/: CameraController.cpp  CameraController.h  Component.cpp  Component.h  Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  SceneStorage.cpp  SceneStorage.h  VisualServer.cpp  VisualServer.h
Aether/src/UI/: CameraController.cpp  CameraController.h  KeyboardRecord.cpp  KeyboardRecord.h  MouseRecord.cpp  MouseRecord.h
Aether/src/Utils/: FileUtils.cpp  FileUtils.h
AetherEditor/: CMakeLists.txt
AetherEditor/lua/: common_script_example.lua
AetherEditor/page/: example.xml
AetherEditor/shader/: plane.fs  plane.vs
AetherEditor/src/: AddMaterialDataPanel.h  AetherEditor.cpp  AetherEditor.h  Editor.cpp  Editor.h  EditorLayer.cpp  EditorLayer.h  FileWatchListener.h  ImGuiLayer.h  Material.h  MaterialBallScene.h  MaterialPanel.h  Notify.h  ShaderReflection.h  impl.cpp  main.cpp
AetherEditor/src/AetherEditor/: AetherEditor.cpp  FileWatchListener.h  FileWatcher.h  ImGuiLayer.h  ImageManager.h  Material.h  Notify.h
AetherEditor/src/Core/: MainScene.cpp  MainScene.h
AetherEditor/src/Layers/: EditorLayer.cpp  EditorLayer.h  LuaLayer.h  UIAttributeParser.h  UILayer.h
AetherEditor/src/Message/: EditorMessage.h  EntitySelected.h
AetherEditor/src/Panel/: AddMaterialDataPanel.h  BlueprintPanel.cpp  BlueprintPanel.h  MainWindow.h  MaterialPanel.cpp  MaterialPanel.h  NodeEditorPanel.h  ScenePanel.h
AetherEditor/src/Panels/: AddPbrMaterialPanel.h  EntityPanel.cpp  EntityPanel.h  EntityTagEditPanel.h  LuaCameraScriptFileSelectPanel.cpp  LuaCameraScriptFileSelectPanel.h  LuaScriptFileSelectPanel.h  MeshFileSelectPanel.h  Panel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneViewPanel.cpp  SceneViewPanel.h  SelectComponentPanel.cpp  SelectComponentPanel.h
AetherEditor/src/Resource/: Shader.h
AetherEditor/src/System/: PickSystem.h  PlaneSystem.cpp  PlaneSystem.h
AetherEditor/src/UI/: FileSelect.h  ImGuiStorage.h  UI.h  UICommandHandler.h  WindowStyle.h
AetherEditor/src/UIComponent/: Image.cpp  Image.h  ImageView.h
AetherEditor/src/panel/: SceneHierachyPanel.cpp  SceneHierachyPanel.h  SceneViewPanel.cpp  SceneViewPanel.h
Core.Tests/: CMakeLists.txt
Core.Tests/src/: StringTest.cpp  TypeArrayTest.cpp
Debug/: CMakeLists.txt
Debug/CMake/: DebugConfig.cmake.in
Debug/src/Debug/: Log.cpp  Log.h
Engine/: .clang-format  .gitignore  CMakeLists.txt  README.md
Engine/Assets/bundle/: bundle.json
Engine/Demo/: CMakeLists.txt
Engine/Demo/ImGuiDemo/: CMakeLists.txt
Engine/Demo/TextDemo/: CMakeLists.txt
Engine/Demo/UIDemo/: CMakeLists.txt
Engine/Dependencies/: CMakeLists.txt
Engine/Dependencies/CMake/: Vulkan.cmake  VulkanConfig.cmake.in
Engine/Document/: DeviceDescriptorPool.md  Mesh.md  Shader.md
Engine/Runtime/: CMakeLists.txt
Engine/Runtime/Audio/: CMakeLists.txt
Engine/Runtime/Core/: CMakeLists.txt
Engine/Runtime/Debug/: CMakeLists.txt
Engine/Runtime/Entry/: CMakeLists.txt
Engine/Runtime/Filesystem/: CMakeLists.txt
Engine/Runtime/IO/: CMakeLists.txt
Engine/Runtime/ImGui/: CMakeLists.txt  README.md
Engine/Runtime/MainLoop/: CMakeLists.txt
Engine/Runtime/Project/: CMakeLists.txt
Engine/Runtime/Render/: CMakeLists.txt
Engine/Runtime/Resource/: CMakeLists.txt
Engine/Runtime/Scene/: CMakeLists.txt
Engine/Runtime/Sprite/: CMakeLists.txt
Engine/Runtime/Text/: CMakeLists.txt
Engine/Runtime/UI/: CMakeLists.txt
Engine/Runtime/Window/: CMakeLists.txt
Engine/Runtime/World/: CMakeLists.txt
Engine/Scripts/: Build.bat  Clean.bat  CreatePackagesDebug.bat  CreateProjectDebug.bat  CreateProjectWithTestsAndDemoDebug.bat
Engine/Tests/: CMakeLists.txt
Engine/Tests/Core.Tests/: CMakeLists.txt
Engine/Tests/Filesystem.Tests/: CMakeLists.txt
Engine/Tests/Render.Tests/: CMakeLists.txt
Engine/Tests/Resource.Tests/: CMakeLists.txt
Engine/Tests/Window.Tests/: CMakeLists.txt
Filesystem/: CMakeLists.txt
Filesystem/CMake/: FilesystemConfig.cmake.in
Filesystem/platform/windows/: FilesystemApi.cpp
Filesystem/src/Filesystem/: Def.h  Directory.h  File.h  Filesystem.h  FilesystemApi.h  Iterator.h  Path.h  Utils.cpp  Utils.h
IO/: CMakeLists.txt
IO/CMake/: IOConfig.cmake.in
IO/src/IO/: Image.cpp  Image.h  Json.h  WriterReader.h
Templates/HelloWorld/: CMakeLists.txt
Test/: BuildGen.bat  CMakeLists.txt
Test/src/: Test1.cpp  impl.cpp
UI/: CMakeLists.txt
UI.Tests/Unit/: CMakeLists.txt
UI/CMake/: UIConfig.cmake.in
Window/: CMakeLists.txt
Window/CMake/: WindowConfig.cmake.in  Window_headerConfig.cmake.in
(+1270 files in other folders)
