cmake_minimum_required(VERSION 3.10)
project(Aether)
set(CMAKE_CXX_STANDARD 23)
set(AETHER_DEPENDENCIES_PREFIX "x64-windows")
add_subdirectory("Core")
add_subdirectory("Core.Tests")
add_subdirectory("Render")
add_subdirectory("Render.Tests")
add_subdirectory("ThirdParty")
add_subdirectory("Filesystem")
add_subdirectory("Filesystem.Tests")
add_subdirectory("Window")
add_subdirectory("Window.Tests")