cmake_minimum_required(VERSION 3.10)
project(Aether)
set(CMAKE_CXX_STANDARD 23)
# 关闭严格别名和整数环绕优化
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    add_compile_options(-fno-strict-overflow -fno-strict-aliasing)
endif()


include("CMake/Local.cmake")
add_subdirectory("Core")
add_subdirectory("Render")
add_subdirectory("ThirdParty")
add_subdirectory("Filesystem")
add_subdirectory("Window")
add_subdirectory("UI")
add_subdirectory("Resource")
add_subdirectory("IO")
add_subdirectory("Dependencies")
add_subdirectory("Entry")
add_subdirectory("Demo")
add_subdirectory("Tests")
add_subdirectory("Scene")
add_subdirectory("Text")
add_subdirectory("Debug")
add_subdirectory("Editor")

