add_subdirectory("Core")
add_subdirectory("Render")
add_subdirectory("Filesystem")
add_subdirectory("Window")
add_subdirectory("UI")
add_subdirectory("Resource")
add_subdirectory("IO")
add_subdirectory("Entry")
add_subdirectory("Scene")
add_subdirectory("Text")
add_subdirectory("Debug")
add_subdirectory("Audio")
add_subdirectory("Sprite")
add_subdirectory("ImGui")
add_subdirectory("Project")

add_subdirectory("Async")